fix gameboard height and hide computer cards out of view

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -10,6 +10,8 @@ nav{
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgb(105, 136, 204) 100%);
   height: 25px;
   font-family: 'Oswald', sans-serif;
+  z-index: 1;
+  position: relative;
 }
 
 .nav-menu {
@@ -92,8 +94,21 @@ label {
   justify-content: center;
 }
 
+.computer-board {
+  position: absolute;
+  top: -35px;
+  z-index: 0;
+  left: 192.5px;
+  right: 192.5px;
+}
+
+.player-board {
+  position: relative;
+  top: 223px;
+}
+
 .player-hand {
-  padding-bottom: 60px;
+  padding-bottom: 40px;
 }
 
 .card {
@@ -160,6 +175,7 @@ label {
 
 .gameBoard {
   background-image: url(../images/comic_background.jpg);
+  height: 95vh;
 }
 .pVSc{
   color: white;
@@ -171,6 +187,8 @@ label {
   width: 100%;
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 
   p:first-child {
     margin-right: 1em;
